--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cosmic-js-chat",
+  "name": "react-socket-io",
   "version": "1.0.0",
   "description": "",
   "main": "app-client.js",
